--- a/src/gradientColor.module.scss
+++ b/src/gradientColor.module.scss
@@ -109,6 +109,18 @@
 
         &.active {
           box-shadow: inset 0 0 0 0 transparent, 0 0 0 2px rgba(44, 110, 203, 1);
+          &::after{
+            content: "";
+            width: 5px;
+            height: 5px;
+            border-radius: 50%;
+            background: #2c6ecb;
+            bottom: -15px;
+            display: block;
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%);
+          }
         }
       }
     }
