--- a/src/gradientColor.module.scss
+++ b/src/gradientColor.module.scss
@@ -210,7 +210,7 @@
       border-radius: var(--p-border-radius-base);
       line-height: 1;
       text-decoration: none;
-      color: var(--p-text);
+      color: rgba(32, 34, 35, 1);
       transition-property: color, background-color;
       transition-duration: var(--p-duration-1-5-0);
       transition-timing-function: var(--p-ease);
@@ -231,7 +231,7 @@
     }
   }
 
-  .defaultSelection {
+  .default-color-list {
     margin: 8px;
 
     .info {
@@ -253,7 +253,19 @@
         box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
         border-radius: 20px;
         cursor: pointer;
-        // border: 2px solid rgba(44, 110, 203, 1);
+        position: relative;
+        &.empty{
+          &::after{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background: #e1e3e5;
+            top: 50%;
+            margin-top: -1px;
+            transform: rotate(45deg);
+          }
+        }
       }
     }
   }
@@ -314,6 +326,67 @@
       top: 50%;
       margin-top: -1px;
       transform: rotate(45deg);
+    }
+  }
+}
+
+.input-number-container{
+  font-weight: 400;
+  line-height: 24px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  color: rgba(32, 34, 35, 1);
+  background-color: rgba(255, 255, 255, 1);
+  border: 1px solid rgba(201, 204, 207, 1);
+  border-radius: 4px;
+  height: 36px;
+  input{
+
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    border: none;
+    position: relative;
+    z-index: 20;
+    display: block;
+    flex: 1 1;
+    width: 100%;
+    min-width: 0;
+    min-height: 36px;
+    margin: 0;
+    padding: 5px 12px;
+    background: none;
+    border: 1px solid transparent;
+    color: rgba(32, 34, 35, 1);
+    font-size: 14px;
+    padding-right: 0;
+  }
+  .btn-group{
+    z-index: 20;
+    margin: 3px;
+    color: rgb(92, 95, 98);
+    display: flex;
+    align-self: stretch;
+    flex-direction: column;
+    width: 22px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    .btn-item{
+      background: rgba(228, 229, 231, 1);
+      border-radius: 2px;
+      -webkit-appearance: none;
+      appearance: none;
+      border: none;
+      svg{
+        display: block;
+        height: 13px;
+        width: 20px;
+        margin: auto;
+        font-size: 14px;
+      }
     }
   }
 }
